--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
 
     <!-- main content -->
     <!-- footer -->
+    <footer class="footer">
+      <p>&copy; 2024</p>
+    </footer>
   </body>
 </html>
