Added main content

--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
     </nav>
 
     <!-- main content -->
+    <main  >
+      <div class="profile-seciton">
+        <h1 class="profile-name">Neeraj Kumar</h1>
+        <img
+          src="https://media.licdn.com/dms/image/v2/C4E03AQFOhTA9ogvQNA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1625218729812?e=1737590400&v=beta&t=puqn2wqlvSILDqqT7AiqGHdyQZyIJC6YKs8LsCwxhQc"
+          alt=""
+          class="profile-image"
+        />
+        <div class="contact-links">
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href=""><i class="fa-brands fa-square-github"></i></i></a>
+          <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href=""><i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+      <div class="about-section">
+        <h3>About Me</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque hic animi pariatur quod quae ea eaque? Fugiat, voluptas nulla excepturi qui rem esse explicabo neque repellendus tempora, assumenda animi non.</p>
+      </div>
+    </main>
     <!-- footer -->
     <footer class="footer">
       <p>&copy; 2024</p>
