--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span>Neeraj Kumar</span>
       <div class="nav-right-content">
         <ul>
-          <li><a href="">Home</a></li>
+          <li class="active"><a href="" >Home</a></li>
           <li><a href="">Project</a></li>
           <li><a href="">Posts</a></li>
           <li><a href="">Resume</a></li>
@@ -40,7 +40,7 @@
           class="profile-image"
         />
         <div class="contact-links">
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href="/" ><i class="fa-brands fa-linkedin"></i></a>
           <a href=""><i class="fa-brands fa-square-github"></i></i></a>
           <a href=""><i class="fa-brands fa-square-twitter"></i></a>
           <a href=""><i class="fa-brands fa-linkedin"></i></a>
