Added project card

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <div class="nav-right-content">
         <ul>
           <li class="active"><a href="" >Home</a></li>
-          <li><a href="">Project</a></li>
-          <li><a href="">Posts</a></li>
+          <li><a href="/pages/project.html">Project</a></li> 
           <li><a href="">Resume</a></li>
         </ul>
         <button class="theme-changer-btn">
